// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input 组件 正确导出 Input 组件 1`] = `
<div
  className="guree-input guree-input"
>
  <input
    className="guree-input-content"
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Input 组件 测试 Input 组件 addonAfter 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <input
    className="guree-input-content"
    onChange={[Function]}
    value=""
  />
  <div
    className="guree-input-add-on guree-input-add-on-after"
  >
    .com
  </div>
</div>
`;

exports[`Input 组件 测试 Input 组件 addonBefore 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <div
    className="guree-input-add-on guree-input-add-on-before"
  >
    http://
  </div>
  <input
    className="guree-input-content"
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Input 组件 测试 Input 组件 allowClear 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <div
    className="guree-input-affix-wrapper"
  >
    <div
      className="guree-input-affix guree-input-pre-fix"
    />
    <input
      className="guree-input-content"
      onChange={[Function]}
      value=""
    />
    <div
      className="guree-input-affix guree-input-suf-fix"
    />
  </div>
</div>
`;

exports[`Input 组件 测试 Input 组件 allowClear 参数 2`] = `
<div
  className="guree-input guree-input"
>
  <div
    className="guree-input-affix-wrapper"
  >
    <div
      className="guree-input-affix guree-input-pre-fix"
    />
    <input
      className="guree-input-content"
      onChange={[Function]}
      value="value"
    />
    <div
      className="guree-input-affix guree-input-suf-fix"
    >
      <span
        className="guree-span guree-input-clear"
      >
        <svg
          className="guree-icon"
          onClick={[Function]}
          style={
            Object {
              "fill": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
        >
          <use
            xlinkHref="#times-circle"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Input 组件 测试 Input 组件 disabled 参数 1`] = `
<div
  className="guree-input guree-input-disabled"
>
  <input
    className="guree-input-content"
    disabled={true}
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Input 组件 测试 Input 组件 placeholder 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <input
    className="guree-input-content"
    onChange={[Function]}
    placeholder="placeholder"
    value=""
  />
</div>
`;

exports[`Input 组件 测试 Input 组件 prefix 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <div
    className="guree-input-affix-wrapper"
  >
    <div
      className="guree-input-affix guree-input-pre-fix"
    >
      ￥
    </div>
    <input
      className="guree-input-content"
      onChange={[Function]}
      value=""
    />
    <div
      className="guree-input-affix guree-input-suf-fix"
    />
  </div>
</div>
`;

exports[`Input 组件 测试 Input 组件 suffix 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <div
    className="guree-input-affix-wrapper"
  >
    <div
      className="guree-input-affix guree-input-pre-fix"
    />
    <input
      className="guree-input-content"
      onChange={[Function]}
      value=""
    />
    <div
      className="guree-input-affix guree-input-suf-fix"
    >
      RMB
    </div>
  </div>
</div>
`;

exports[`Input 组件 测试 Input 组件 type 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <input
    className="guree-input-content"
    onChange={[Function]}
    type="number"
    value=""
  />
</div>
`;

exports[`Input 组件 测试 Input 组件 type 参数 2`] = `
<div
  className="guree-input guree-input"
>
  <input
    className="guree-input-content"
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`Input 组件 测试 Input 组件 value 参数 1`] = `
<div
  className="guree-input guree-input"
>
  <input
    className="guree-input-content"
    onChange={[Function]}
    value="value"
  />
</div>
`;
